Revert of Add arguments to launch app